src/objects/Project_Task__c.object
<CustomObject>
    <description>https://help.getharvest.com/api-v2/tasks-api/tasks/tasks/
Creating this object so a Project Task can be created once and reused across multiple Projects.
Naming this Project Task instead of just Task since SF already has a Task object - can cause confusing when configuring SF if user sees 2 objects labeled Task.</description>
    <fields>
        <fullName>Billable_By_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in determining whether default tasks should be marked billable when creating a new project.</description>
        <label>Billable By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Hourly_Rate__c</fullName>
        <description>The hourly rate to use for this task when it is added to a project.</description>
        <label>Default Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Harvest_Id__c</fullName>
        <description>Will be retrieved and saved here by Harvest API code in the future - no need to set. marking as external id so we can search on it</description>
        <externalId>true</externalId>
        <label>Harvest Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this task is active or archived.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this task should be automatically added to future projects.</description>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>